--- a/test.html
+++ b/test.html
@@ -6,5 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="header"></div>
+    </div>
 </body>
 </html>
